# coreclr

tests/src/: dirs.proj
tests/src/Interop/: CMakeLists.txt
tests/src/Interop/EnumMarshalling/: CMakeLists.txt  MarshalEnumManaged.cs  MarshalEnumNative.cpp
tests/src/Interop/FuncPtrAsDelegateParam/: CMakeLists.txt  FuncPtrAsDelegateParamManaged.cs
tests/src/Interop/SimpleStruct/: CMakeLists.txt  SimpleStructManaged.cs
tests/src/Interop/StructMarshalling/PInvoke/: MarshalStructAsLayoutExp.cs  MarshalStructAsLayoutSeq.cs  MarshalStructAsParamDLL.cpp  MarshalStructAsParamDLL.h  Struct.cs
